[package]
name = "webrtc-netstack"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "webrtc-netstack"
path = "src/main.rs"

[dependencies]
smoltcp = "0.12.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "MessageEvent",
    "WebSocket"
]}
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
